--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -34,6 +34,11 @@
                 <a th:href="@{/list/jobs(column=skill,value=${skill.name})}" th:text="${skill.name}"></a>
             </li>
         </td>
+        <td>
+            <li th:each="skill : ${location}">
+                <a th:href="@{/list/jobs(column=location,value=${location.name})}" th:text="${location.name}"></a>
+            </li>
+        </td>
     </tr>
 </table>
 
