--- a/src/main/resources/templates/employers/index.html
+++ b/src/main/resources/templates/employers/index.html
@@ -18,6 +18,17 @@
     <a th:href="@{'/employers/add'}">Add Employers</a>
 
 </div>
+<table class="table">
 
+    <tr>
+        <th>Name</th>
+        <th>Location</th>
+    </tr>
+    <tr th:block th:each="employer : ${employers}">
+        <td th:text="${employer.name}"></td>
+        <td th:text="${employer.description}"></td>
+
+    </tr>
+</table>
 </body>
 </html>
